--- a/index.css
+++ b/index.css
@@ -12,17 +12,12 @@ body {
     color: white;
 }
 
-h1 {
-    font-size: 2.5rem;
+h1, h3 {
+    font-weight: 300;
 }
 
 h2 {
-    font-size: 2rem;
     font-weight: 400;
-}
-
-h3 {
-    font-size: 1.5rem;
 }
 
 a, a:hover, a:visited {
